--- a/form.css
+++ b/form.css
@@ -1,7 +1,102 @@
 #Form-portion{
-    display: flex;
-    justify-content: center;
+    /* display: flex; */
+    justify-content: left;
     width: 325px;
     height: 600px;
-    border: 1px solid red;
+    /* border: 1px solid red; */
+}
+
+.loginContent{
+    margin-left: 20px;
+    margin-top: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 40px;
+}
+
+.loginContent2 {
+    margin-left: 20px;
+    font-family: sans-serif;
+    justify-content: left;
+    text-align: left;
+    margin-left: 20px;
+    margin-top: -25px;
+    color: rgb(132, 128, 128);
+    font-size: 12px;
+}
+
+.form-Div1 {
+    margin-left: 20px;
+    margin-top: 30px;
+    /* border: 1px solid orange; */
+}
+
+.form-Div2 {
+    margin-left: 20px;
+    margin-top: 20px;
+    /* border: 1px solid orange; */
+}
+
+.form-Div3 {
+    margin-left: 20px;
+    margin-top: 20px;
+    /* border: 1px solid orange; */
+}
+
+.form-Div4 {
+    margin-left: 20px;
+    margin-top: 10px;
+    /* border: 1px solid orange; */
+    /* width: 270px; */
+}
+
+.form-Div5 {
+    margin-left: 20px;
+    margin-top: 20px;
+    font-size: 15px;
+    /* border: 1px solid orange; */
+}
+
+
+.PlaceHolders {
+    font-family: sans-serif;
+    font-weight: bold;
+    color: rgb(113, 109, 109);
+}
+
+.inputTypes {
+    margin-top: 10px;
+    width: 260px;
+    height: 40px;
+    border-radius: 5px;
+}
+
+.submitType{
+    margin-top: 10px;
+    width: 270px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: blueviolet;
+    border: 0px ;
+}
+
+div p {
+    display: inline;
+    font-family: sans-serif;
+    justify-content: right;
+    text-align: right;
+    margin-right: 0px;
+    font-size: 12px;
+    font-weight: bold;
+    color: rgb(181, 176, 176);
+}
+
+#Forgot {
+    
+}
+
+#sign {
+    color: blueviolet;
+    font-weight: bold;
+    font-family: sans-serif;
+    
 }
