--- a/welcome.css
+++ b/welcome.css
@@ -3,8 +3,10 @@
     justify-content: center;
     width: 325px;
     height: 600px;
-    border: 1px solid green;
-    background-color: lightslategray;
+    /* border: 1px solid green; */
+    transition: background-color 0.5s ease, width 0.5s ease;
+    background: linear-gradient(to right top, lightgrey, lightpink, lightblue);
+
 }
 
 #welcome-heading {
@@ -12,6 +14,6 @@
     /* text-align: center; */
     font-family: Arial, Helvetica, sans-serif;
     margin-top: 70%;
-    font-size: 50px;
+    font-size: 60px;
     color: white;
 }
