--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@
     width: 650px;
     height: 600px;
     border: 2px solid black;
-    margin-top: 20px;
-    margin-left: 300px;
+    margin-top: 40px;
+    /* margin-left: 300px; */
+    justify-content: center;
 }
 
