--- a/style.css
+++ b/style.css
@@ -12,3 +12,65 @@
     justify-content: center;
 }
 
+@media only screen and (max-width: 599px) {
+    /* CSS rules for screens smaller than 600px */
+    .container{
+        display: flex;
+        width: 650px;
+        height: 600px;
+        border: 2px solid black;
+        margin-top: 40px;
+        /* margin-left: 300px; */
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+    .container{
+        display: flex;
+        width: 650px;
+        height: 600px;
+        border: 2px solid black;
+        margin-top: 40px;
+        /* margin-left: 300px; */
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .container{
+        display: flex;
+        width: 650px;
+        height: 600px;
+        border: 2px solid black;
+        margin-top: 40px;
+        /* margin-left: 300px; */
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    /* CSS rules for screens between 992px and 1199px */
+    .container{
+        display: flex;
+        width: 650px;
+        height: 600px;
+        border: 2px solid black;
+        margin-top: 40px;
+        /* margin-left: 300px; */
+        justify-content: center;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    /* CSS rules for screens 1200px and up */
+    .container{
+        display: flex;
+        width: 650px;
+        height: 600px;
+        border: 2px solid black;
+        margin-top: 40px;
+        /* margin-left: 300px; */
+        justify-content: center;
+    }
+}
