--- a/style.css
+++ b/style.css
@@ -2,6 +2,16 @@
 @import url("form.css");
 
 
+.container{
+    display: flex;
+    width: 650px;
+    height: 600px;
+    border: 2px solid black;
+    margin-top: 40px;
+    /* margin-left: 300px; */
+    justify-content: center;
+}
+
 @media only screen and (max-width: 599px) {
     /* CSS rules for screens smaller than 600px */
     .container{
@@ -55,12 +65,12 @@
 @media only screen and (min-width: 1200px) {
     /* CSS rules for screens 1200px and up */
     .container{
-        display: flex;
-        width: 650px;
-        height: 600px;
-        border: 2px solid black;
-        margin-top: 40px;
-        /* margin-left: 300px; */
-        justify-content: center;
-    }
+    display: flex;
+    width: 650px;
+    height: 600px;
+    border: 2px solid black;
+    margin-top: 40px;
+    /* margin-left: 300px; */
+    justify-content: center;
+}
 }
