--- a/form.css
+++ b/form.css
@@ -1,735 +1,155 @@
-/* RESPONSIVE DESIGN */
-
-@media only screen and (max-width: 599px) {
-    #Form-portion{
-        /* display: flex; */
-        justify-content: left;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid red; */
-    }
-    
-    .form-login {
-        margin-left: 20px;
-        margin-top: 60px;
-        justify-content: left;
-        text-align: left;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 40px;
-        font-weight: bold;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-welcome{
-        margin-left: 20px;
-        font-family: sans-serif;
-        justify-content: left;
-        text-align: left;
-        margin-left: 20px;
-        margin-top: -10px;
-        color: rgb(132, 128, 128);
-        font-size: 12px;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-Div1 {
-        margin-left: 20px;
-        margin-top: 30px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div2 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div3 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div4 {
-        margin-left: 20px;
-        margin-top: 10px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div5 {
-        margin-left: 20px;
-        margin-top: 20px;
-        font-size: 15px;
-        text-align: left;
-        justify-content: left;
-        /* border: 1px solid orange; */
-    }
-    
-    
-    .PlaceHolders {
-        font-family: sans-serif;
-        font-weight: bold;
-        color: rgb(113, 109, 109);
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .inputTypes {
-        margin-top: 10px;
-        width: 260px;
-        height: 40px;
-        border-radius: 5px;
-    }
-    
-    .submitType{
-        margin-top: 10px;
-        width: 270px;
-        height: 40px;
-        border-radius: 5px;
-        background-color: blueviolet;
-        border: 0px;
-        margin-left: 0px;
-    }
-    
-    div p {
-        display: inline;
-        font-family: sans-serif;
-        justify-content: right;
-        text-align: right;
-        margin-right: 0px;
-        font-size: 12px;
-        font-weight: bold;
-        color: rgb(181, 176, 176);
-    }
-    
-    #Forgot {
-        
-    }
-    
-    #sign {
-        color: blueviolet;
-        font-weight: bold;
-        font-family: sans-serif;
-        
-    }
+/* Base styles */
+#Form-portion {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 90%;
+    max-width: 400px;
+    height: auto;
+    margin: 0 auto;
 }
 
-@media only screen and (min-width: 600px) and (max-width: 767px) {
-    #Form-portion{
-        /* display: flex; */
-        justify-content: left;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid red; */
-    }
-    
-    .form-login {
-        margin-left: 20px;
-        margin-top: 60px;
-        justify-content: left;
-        text-align: left;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 40px;
-        font-weight: bold;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-welcome{
-        margin-left: 20px;
-        font-family: sans-serif;
-        justify-content: left;
-        text-align: left;
-        margin-left: 20px;
-        margin-top: -10px;
-        color: rgb(132, 128, 128);
-        font-size: 12px;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-Div1 {
-        margin-left: 20px;
-        margin-top: 30px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div2 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div3 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div4 {
-        margin-left: 20px;
-        margin-top: 10px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div5 {
-        margin-left: 20px;
-        margin-top: 20px;
-        font-size: 15px;
-        text-align: left;
-        justify-content: left;
-        /* border: 1px solid orange; */
-    }
-    
-    
-    .PlaceHolders {
-        font-family: sans-serif;
-        font-weight: bold;
-        color: rgb(113, 109, 109);
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .inputTypes {
-        margin-top: 10px;
-        width: 260px;
-        height: 40px;
-        border-radius: 5px;
-    }
-    
-    .submitType{
-        margin-top: 10px;
-        width: 270px;
-        height: 40px;
-        border-radius: 5px;
-        background-color: blueviolet;
-        border: 0px;
-        margin-left: 0px;
-    }
-    
-    div p {
-        display: inline;
-        font-family: sans-serif;
-        justify-content: right;
-        text-align: right;
-        margin-right: 0px;
-        font-size: 12px;
-        font-weight: bold;
-        color: rgb(181, 176, 176);
-    }
-    
-    #Forgot {
-        
-    }
-    
-    #sign {
-        color: blueviolet;
-        font-weight: bold;
-        font-family: sans-serif;
-        
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    #Form-portion{
-        /* display: flex; */
-        justify-content: left;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid red; */
-    }
-    
-    .form-login {
-        margin-left: 20px;
-        margin-top: 60px;
-        justify-content: left;
-        text-align: left;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 40px;
-        font-weight: bold;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-welcome{
-        margin-left: 20px;
-        font-family: sans-serif;
-        justify-content: left;
-        text-align: left;
-        margin-left: 20px;
-        margin-top: -10px;
-        color: rgb(132, 128, 128);
-        font-size: 12px;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-Div1 {
-        margin-left: 20px;
-        margin-top: 30px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div2 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div3 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div4 {
-        margin-left: 20px;
-        margin-top: 10px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div5 {
-        margin-left: 20px;
-        margin-top: 20px;
-        font-size: 15px;
-        text-align: left;
-        justify-content: left;
-        /* border: 1px solid orange; */
-    }
-    
-    
-    .PlaceHolders {
-        font-family: sans-serif;
-        font-weight: bold;
-        color: rgb(113, 109, 109);
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .inputTypes {
-        margin-top: 10px;
-        width: 260px;
-        height: 40px;
-        border-radius: 5px;
-    }
-    
-    .submitType{
-        margin-top: 10px;
-        width: 270px;
-        height: 40px;
-        border-radius: 5px;
-        background-color: blueviolet;
-        border: 0px;
-        margin-left: 0px;
-    }
-    
-    div p {
-        display: inline;
-        font-family: sans-serif;
-        justify-content: right;
-        text-align: right;
-        margin-right: 0px;
-        font-size: 12px;
-        font-weight: bold;
-        color: rgb(181, 176, 176);
-    }
-    
-    #Forgot {
-        
-    }
-    
-    #sign {
-        color: blueviolet;
-        font-weight: bold;
-        font-family: sans-serif;
-        
-    }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-    #Form-portion{
-        /* display: flex; */
-        justify-content: left;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid red; */
-    }
-    
-    .form-login {
-        margin-left: 20px;
-        margin-top: 60px;
-        justify-content: left;
-        text-align: left;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 40px;
-        font-weight: bold;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-welcome{
-        margin-left: 20px;
-        font-family: sans-serif;
-        justify-content: left;
-        text-align: left;
-        margin-left: 20px;
-        margin-top: -10px;
-        color: rgb(132, 128, 128);
-        font-size: 12px;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-Div1 {
-        margin-left: 20px;
-        margin-top: 30px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div2 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div3 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div4 {
-        margin-left: 20px;
-        margin-top: 10px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div5 {
-        margin-left: 20px;
-        margin-top: 20px;
-        font-size: 15px;
-        text-align: left;
-        justify-content: left;
-        /* border: 1px solid orange; */
-    }
-    
-    
-    .PlaceHolders {
-        font-family: sans-serif;
-        font-weight: bold;
-        color: rgb(113, 109, 109);
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .inputTypes {
-        margin-top: 10px;
-        width: 260px;
-        height: 40px;
-        border-radius: 5px;
-    }
-    
-    .submitType{
-        margin-top: 10px;
-        width: 270px;
-        height: 40px;
-        border-radius: 5px;
-        background-color: blueviolet;
-        border: 0px;
-        margin-left: 0px;
-    }
-    
-    div p {
-        display: inline;
-        font-family: sans-serif;
-        justify-content: right;
-        text-align: right;
-        margin-right: 0px;
-        font-size: 12px;
-        font-weight: bold;
-        color: rgb(181, 176, 176);
-    }
-    
-    #Forgot {
-        
-    }
-    
-    #sign {
-        color: blueviolet;
-        font-weight: bold;
-        font-family: sans-serif;
-        
-    }
-}
-
-@media only screen and (min-width: 1200px) {
-    #Form-portion{
-        /* display: flex; */
-        justify-content: left;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid red; */
-    }
-    
-    .form-login {
-        margin-left: 20px;
-        margin-top: 60px;
-        justify-content: left;
-        text-align: left;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 40px;
-        font-weight: bold;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-welcome{
-        margin-left: 20px;
-        font-family: sans-serif;
-        justify-content: left;
-        text-align: left;
-        margin-left: 20px;
-        margin-top: -10px;
-        color: rgb(132, 128, 128);
-        font-size: 12px;
-        /* border: 1px solid orange; */
-    }
-    
-    .form-Div1 {
-        margin-left: 20px;
-        margin-top: 30px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div2 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div3 {
-        margin-left: 20px;
-        margin-top: 20px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div4 {
-        margin-left: 20px;
-        margin-top: 10px;
-        /* border: 1px solid orange; */
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .form-Div5 {
-        margin-left: 20px;
-        margin-top: 20px;
-        font-size: 15px;
-        text-align: left;
-        justify-content: left;
-        /* border: 1px solid orange; */
-    }
-    
-    
-    .PlaceHolders {
-        font-family: sans-serif;
-        font-weight: bold;
-        color: rgb(113, 109, 109);
-        justify-content: left;
-        text-align: left;
-    }
-    
-    .inputTypes {
-        margin-top: 10px;
-        width: 260px;
-        height: 40px;
-        border-radius: 5px;
-    }
-    
-    .submitType{
-        margin-top: 10px;
-        width: 270px;
-        height: 40px;
-        border-radius: 5px;
-        background-color: blueviolet;
-        border: 0px;
-        margin-left: 0px;
-    }
-    
-    div p {
-        display: inline;
-        font-family: sans-serif;
-        justify-content: right;
-        text-align: right;
-        margin-right: 0px;
-        font-size: 12px;
-        font-weight: bold;
-        color: rgb(181, 176, 176);
-    }
-    
-    #Forgot {
-        
-    }
-    
-    #sign {
-        color: blueviolet;
-        font-weight: bold;
-        font-family: sans-serif;
-        
-    }
-}
-
-
-
-
- #Form-portion{
-    /* display: flex; */
-    justify-content: left;
-    width: 325px;
-    height: 600px;
-    /* border: 1px solid red; */
-} 
-
-.form-login {
-    margin-left: 20px;
-    margin-top: 60px;
-    justify-content: left;
+.form-login, .form-welcome, .form-Div1, .form-Div2, .form-Div3, .form-Div4, .form-Div5 {
+    margin: 0 20px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 40px;
-    font-weight: bold;
-    /* border: 1px solid orange; */
 }
 
-.form-welcome{
-    margin-left: 20px;
-    font-family: sans-serif;
-    justify-content: left;
-    text-align: left;
-    margin-left: 20px;
+.form-login {
+    margin-top: 40px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+.form-welcome {
     margin-top: -10px;
     color: rgb(132, 128, 128);
-    font-size: 12px;
-    /* border: 1px solid orange; */
+    font-size: 1rem;
 }
-
-.form-Div1 {
-    margin-left: 20px;
-    margin-top: 30px;
-    /* border: 1px solid orange; */
-    justify-content: left;
-    text-align: left;
-}
-
-.form-Div2 {
-    margin-left: 20px;
-    margin-top: 20px;
-    /* border: 1px solid orange; */
-    justify-content: left;
-    text-align: left;
-}
-
-.form-Div3 {
-    margin-left: 20px;
-    margin-top: 20px;
-    /* border: 1px solid orange; */
-    justify-content: left;
-    text-align: left;
-}
-
-.form-Div4 {
-    margin-left: 20px;
-    margin-top: 10px;
-    /* border: 1px solid orange; */
-    justify-content: left;
-    text-align: left;
-}
-
-.form-Div5 {
-    margin-left: 20px;
-    margin-top: 20px;
-    font-size: 15px;
-    text-align: left;
-    justify-content: left;
-    /* border: 1px solid orange; */
-}
-
 
 .PlaceHolders {
     font-family: sans-serif;
     font-weight: bold;
     color: rgb(113, 109, 109);
-    justify-content: left;
-    text-align: left;
 }
 
-.inputTypes {
+.inputTypes, .submitType {
     margin-top: 10px;
-    width: 260px;
+    width: 100%;
+    max-width: 270px;
     height: 40px;
     border-radius: 5px;
 }
 
-.submitType{
-    margin-top: 10px;
-    width: 270px;
-    height: 40px;
-    border-radius: 5px;
+.submitType {
     background-color: blueviolet;
-    border: 0px;
-    margin-left: 0px;
+    border: none;
 }
 
 div p {
     display: inline;
     font-family: sans-serif;
-    justify-content: right;
     text-align: right;
     margin-right: 0px;
-    font-size: 12px;
+    font-size: 0.75rem;
     font-weight: bold;
     color: rgb(181, 176, 176);
-}
-
-#Forgot {
-    
 }
 
 #sign {
     color: blueviolet;
     font-weight: bold;
     font-family: sans-serif;
-    
 }
 
+/* Media queries for specific screen sizes */
+@media only screen and (max-width: 599px) {
+    #Form-portion {
+        width: 100%;
+    }
+
+    .form-login {
+        font-size: 1.5rem;
+    }
+
+    .form-welcome {
+        font-size: 0.875rem;
+    }
+
+    div p {
+        font-size: 0.75rem;
+    }
+}
+
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+    #Form-portion {
+        width: 80%;
+    }
+
+    .form-login {
+        font-size: 1.75rem;
+    }
+
+    .form-welcome {
+        font-size: 1rem;
+    }
+
+    div p {
+        font-size: 0.875rem;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    #Form-portion {
+        width: 70%;
+    }
+
+    .form-login {
+        font-size: 2rem;
+    }
+
+    .form-welcome {
+        font-size: 1.125rem;
+    }
+
+    div p {
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+    #Form-portion {
+        width: 60%;
+    }
+
+    .form-login {
+        font-size: 2.25rem;
+    }
+
+    .form-welcome {
+        font-size: 1.25rem;
+    }
+
+    div p {
+        font-size: 1.125rem;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    #Form-portion {
+        width: 50%;
+    }
+
+    .form-login {
+        font-size: 2.5rem;
+    }
+
+    .form-welcome {
+        font-size: 1.5rem;
+    }
+
+    div p {
+        font-size: 1.25rem;
+    }
+}
+fd
