--- a/welcome.css
+++ b/welcome.css
@@ -6,124 +6,43 @@
     /* border: 1px solid green; */
     transition: background-color 0.5s ease, width 0.5s ease;
     background: linear-gradient(to right top, lightgrey, lightpink, lightblue);
-
 }
 
 #welcome-heading {
     justify-content: center;
     /* text-align: center; */
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 70%;
+    margin-top: 50%;
     font-size: 60px;
     color: white;
 }
 
 @media only screen and (max-width: 599px) {
     #welcome-img {
-        display: flex;
-        justify-content: center;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid green; */
-        transition: background-color 0.5s ease, width 0.5s ease;
-        background: linear-gradient(to right top, lightgrey, lightpink, lightblue);
-    
-    }
-    
-    #welcome-heading {
-        justify-content: center;
-        /* text-align: center; */
-        font-family: Arial, Helvetica, sans-serif;
-        margin-top: 70%;
-        font-size: 60px;
-        color: white;
+        width: 100%;
     }
 }
 
 @media only screen and (min-width: 600px) and (max-width: 767px) {
     #welcome-img {
-        display: flex;
-        justify-content: center;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid green; */
-        transition: background-color 0.5s ease, width 0.5s ease;
-        background: linear-gradient(to right top, lightgrey, lightpink, lightblue);
-    
-    }
-    
-    #welcome-heading {
-        justify-content: center;
-        /* text-align: center; */
-        font-family: Arial, Helvetica, sans-serif;
-        margin-top: 70%;
-        font-size: 60px;
-        color: white;
+        width: 100%;
     }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
     #welcome-img {
-        display: flex;
-        justify-content: center;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid green; */
-        transition: background-color 0.5s ease, width 0.5s ease;
-        background: linear-gradient(to right top, lightgrey, lightpink, lightblue);
-    
-    }
-    
-    #welcome-heading {
-        justify-content: center;
-        /* text-align: center; */
-        font-family: Arial, Helvetica, sans-serif;
-        margin-top: 70%;
-        font-size: 60px;
-        color: white;
+        width: 100%;
     }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
     #welcome-img {
-        display: flex;
-        justify-content: center;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid green; */
-        transition: background-color 0.5s ease, width 0.5s ease;
-        background: linear-gradient(to right top, lightgrey, lightpink, lightblue);
-    
-    }
-    
-    #welcome-heading {
-        justify-content: center;
-        /* text-align: center; */
-        font-family: Arial, Helvetica, sans-serif;
-        margin-top: 70%;
-        font-size: 60px;
-        color: white;
+        width: 100%;
     }
 }
 
 @media only screen and (min-width: 1200px) {
     #welcome-img {
-        display: flex;
-        justify-content: center;
-        width: 325px;
-        height: 600px;
-        /* border: 1px solid green; */
-        transition: background-color 0.5s ease, width 0.5s ease;
-        background: linear-gradient(to right top, lightgrey, lightpink, lightblue);
-    
-    }
-    
-    #welcome-heading {
-        justify-content: center;
-        /* text-align: center; */
-        font-family: Arial, Helvetica, sans-serif;
-        margin-top: 70%;
-        font-size: 60px;
-        color: white;
+        width: 100%;
     }
 }
