--- a/form.css
+++ b/form.css
@@ -106,14 +106,21 @@ div p {
 
     .form-login {
         font-size: 2rem;
+        margin-top: 60px;
     }
 
     .form-welcome {
-        font-size: 1.125rem;
+        font-size: 1rem;
     }
 
     div p {
         font-size: 1rem;
+    }
+    #Forgot{
+        font-size: 0.8rem;
+    }
+    #newUser{
+        font-size: 0.8rem;
     }
 }
 
@@ -124,14 +131,22 @@ div p {
 
     .form-login {
         font-size: 2.25rem;
+        margin-top: 60px;
     }
 
     .form-welcome {
-        font-size: 1.25rem;
+        font-size: 1rem;
     }
 
     div p {
         font-size: 1.125rem;
+    }
+    #Forgot{
+        font-size: 0.8rem;
+    }
+
+    #newUser{
+        font-size: 0.8rem;
     }
 }
 
@@ -142,14 +157,20 @@ div p {
 
     .form-login {
         font-size: 2.5rem;
+        margin-top: 60px;
     }
 
     .form-welcome {
-        font-size: 1.5rem;
+        font-size: 1rem;
     }
 
     div p {
         font-size: 1.25rem;
     }
+    #Forgot{
+        font-size: 1rem;
+    }
+    #newUser{
+        font-size: 1rem;
+    }
 }
-fd
